--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 
 <head>
     <title>Hallo Boylies</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script src="https://unpkg.com/vue"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        crossorigin="anonymous">
+
     <link rel="stylesheet" href="layout.css" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
 </head>
@@ -17,27 +21,34 @@
             </span>
             <span><img src="assets/boylie.png" alt="Boylie"></span>
         </div>
-        <div id="content" >
-            <table>
-                <tr>
-                    <th></th>
-                    <th v-for="type in typen">
-                        {{type}}
-                    </th>
-                    <th></th>
-                </tr>
-                <tr v-for="name in boylies">
-                    <td>{{ name }}</td>
-                    <td v-for="type in typen">
-                            <button-counter v-bind:wert="bewertung[name][type]" ></button-counter>
-                    </td>
-                    <td>{{ summe[name] | euro }}  <button class="btn"  v-on:click="calc(name)">calc</button></td>
-                </tr>
+        <div id="content">
+            <table class="table table-striped"> 
+                <thead class="thead-light">
+                    <tr>
+                        <th></th>
+                        <th v-for="type in typen">
+                            {{type}}
+                        </th>
+                        <th><button class="btn btn-info" v-on:click="calcAll()">Summen</button></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr v-for="name in boylies">
+                        <td><button class="btn btn-info" v-on:click="calc(name)">{{ name }}</button></td>
+                        <td v-for="type in typen">
+                            <button-counter v-bind:wert="bewertung[name][type]"></button-counter>
+                        </td>
+                        <td><span class="counter">{{ summe[name] | euro }}</span></td>
+                    </tr>
+                </tbody>
 
             </table>
-            
+
         </div>
     </div>
+    <!-- built files will be auto injected 
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"  crossorigin="anonymous"></script>-->
 
     <script src="app.js">
 
