--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <div class="container">
                 <div class="row">
 
-                    <div class="col"><img src="assets/25.png" alt="25"></div>
+                    <div class="col"><img src="assets/25.png" alt="25">
+                    <div>Hallo Boylies ({{version}})</div>
+                    </div>
                     <div class="col">
 
                         <form>
@@ -74,7 +76,7 @@
                 </thead>
                 <tbody>
                     <tr v-for="name in boylies">
-                        <td><button class="btn btn-info" v-on:click="calc(name)">{{ name }}</button></td>
+                        <td><button class="btn " v-bind:class="{ 'btn-success':active[name], 'btn-danger':!active[name] }" v-on:click="toggleActive(name)">{{ name }}</button></td>
                         <td v-for="type in typen">
                             <button-counter v-bind:wert="bewertung[name][type]"></button-counter>
                         </td>
