--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
                     <tr v-for="name in boylies"  >
                         <td><button class="btn " v-bind:class="{ 'btn-success':active[name], 'btn-danger':!active[name] }" v-on:click="toggleActive(name)">{{ name }}</button></td>
                         <td v-for="type in typen">
-                            <button-counter v-on:inc="inc" v-on:dec="dec" v-bind:wert="bewertung[name][type]"></button-counter>
+                            <button-counter v-on:inc="inc" v-on:dec="dec" v-on:inco="incOther" v-on:deco="decOther" v-bind:wert="bewertung[name][type]">
+                                {{bewertung[name][type].counter}}
+                            </button-counter>
                         </td>
-                        <td><span class="counter">{{ summe[name] | euro }}</span></td>
+                        <td><span class="counter" >{{ summe[name] | euro }}</span></td>
                     </tr>
                 </tbody>
 
